external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_extra_args.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W09003]: unused assignment
  ┌─ tests/move_2024/matching/invalid_extra_args.move:9:13
  │
9 │         let subject = E::A(0);
  │             ^^^^^^^ Unused assignment for variable 'subject'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_subject')
  │
  = This warning can be suppressed with '#[allow(unused_assignment)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03013]: positional call mismatch
  ┌─ tests/move_2024/matching/invalid_extra_args.move:9:23
  │
3 │         A,
  │         - 'A' is declared here
  ·
9 │         let subject = E::A(0);
  │                       ^^^^^^^ Invalid variant instantiation. Empty variant declarations require empty instantiations
  │
  = Remove '()' arguments from this instantiation

error[E03013]: positional call mismatch
   ┌─ tests/move_2024/matching/invalid_extra_args.move:12:13
   │
 3 │         A,
   │         - 'A' is declared here
   ·
12 │             E::A(x) if (true) => x,
   │             ^^^^^^^ Invalid variant pattern. Empty variant declarations require empty patterns
   │
   = Remove '()' arguments from this pattern

error[E03013]: positional call mismatch
   ┌─ tests/move_2024/matching/invalid_extra_args.move:14:13
   │
 3 │         A,
   │         - 'A' is declared here
   ·
14 │             E::A(x) | E::C(x, _, 0) => x,
   │             ^^^^^^^ Invalid variant pattern. Empty variant declarations require empty patterns
   │
   = Remove '()' arguments from this pattern
